# PathTracer

./: CMakeLists.txt  Readme.md
assets/: cornell copy.xml  cornell.xml  cornell1.xml  project1.xml  project11.xml  project11b.xml  project2.xml  project3_1.xml  project3_2.xml  project4.xml  project5.xml  project7.xml  project8.xml  project9.xml
assets/cornell/: backwall.model  ceiling.model  floor.model  leftwall.model  light.model  rightwall.model  shortbox.model  tallbox.model
assets/models/: rock.fbx
include/: Transformation.h  application.h  box.h  brdf_cook_torrance.h  bvh.h  config.h  constants.h  disneyBrdf.h  disneyMaterial.h  filter.h  hitinfo.h  irradiancemap.h  itembase.h  lightcomponent.h  lights.h  materials.h  mesh.h  meshbuilder.h  model.h  node.h  obj_material.h  objbase.h  objects.h  parser.h  pathtracer.h  ray.h  raytracer.h  render.h  renderimagehelper.h  sampler.h  samplereditor.h  scene.h  standardMaterial.h  string_utils.h  texture.h  texture2d.h  tonemapping.h  utils.h  window.h  xmlload.h
lib/minifb/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
lib/minifb/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
lib/minifb/minifb.build/Debug/ALL_BUILD.build/: Script-24DEE6B85C024DAD958DCC8C.sh  dgph
lib/minifb/minifb.build/Debug/ZERO_CHECK.build/: Script-46320380C29F46E78B24C3E5.sh  dgph
lib/minifb/minifb.build/Debug/minifb.build/: dgph
lib/minifb/minifb.build/Debug/minifb.build/Objects-normal/x86_64/: minifb.LinkFileList
lib/minifb/minifb.xcodeproj/: project.pbxproj
lib/minifb/minifb.xcodeproj/project.xcworkspace/xcuserdata/litianyu.xcuserdatad/: UserInterfaceState.xcuserstate
lib/minifb/minifb.xcodeproj/xcuserdata/litianyu.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: application.cpp  bvh.cpp  filter.cpp  lightcomponent.cpp  lights.cpp  main.cpp  materials.cpp  mesh.cpp  model.cpp  node.cpp  obj_material.cpp  objbase.cpp  objects.cpp  pathtracer.cpp  raytracer.cpp  sampler.cpp  scene.cpp  string_utils.cpp  texture.cpp  texture2d.cpp  utils.cpp  window.cpp  xmlload.cpp
